--- a/package.json
+++ b/package.json
@@ -3,16 +3,29 @@
   "description": "TODO",
   "version": "0.0.1",
   "scripts": {
-    "dev": "sapper dev",
-    "build": "sapper build --legacy",
-    "export": "sapper export --legacy",
+    "watch:css": "postcss src/assets/global.pcss -o static/global.css -w",
+    "watch:dev": "sapper dev",
+    "dev": "run-p watch:*",
+    "build": "run-s build:css build:sapper --legacy",
+    "build:css": "NODE_ENV=production postcss src/assets/global.pcss -o static/global.css",
+    "build:sapper": "sapper build",
+    "build:export": "sapper export",
+    "export": "run-s build:css build:export",
     "start": "node __sapper__/build",
-    "validate": "svelte-check --ignore src/node_modules/@sapper"
+    "serve": "serve ___sapper__/export"
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "cssnano": "^4.1.10",
+    "npm-run-all": "^4.1.5",
     "polka": "next",
-    "sirv": "^1.0.0"
+    "postcss": "^8.2.1",
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.0",
+    "postcss-load-config": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "sirv": "^1.0.0",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "sapper": "^0.28.0",
