--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "cookie-parser": "^1.4.5",
     "cssnano": "^4.1.10",
     "dotenv": "^8.2.0",
     "firebase": "^8.2.0",
+    "js-cookie": "^2.2.1",
     "npm-run-all": "^4.1.5",
     "polka": "next",
     "postcss": "^8.2.1",
