--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.5",
     "cssnano": "^4.1.10",
     "dotenv": "^8.2.0",
+    "email-validator": "^2.0.4",
     "firebase": "^8.2.0",
     "js-cookie": "^2.2.1",
     "npm-run-all": "^4.1.5",
