--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,1 +1,8 @@
-{"recommendations": ["svelte.svelte-vscode"]}
+{"recommendations": [
+  "svelte.svelte-vscode",  
+  "bradlc.vscode-tailwindcss",
+  "dbaeumer.vscode-eslint",
+  "jsayol.firebase-explorer",
+  "svelte.svelte-vscode"
+  ]
+}
