--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build:export": "sapper export",
     "export": "run-s build:css build:export",
     "start": "node __sapper__/build",
-    "serve": "serve ___sapper__/export"
+    "serve": "serve ___sapper__/export",
+    "eslint": "eslint",
+		"eslint:fix": "eslint --fix ./*.js ./src/*.ts ./src/components/**/*.svelte ./src/graphql/**/*.ts ./src/routes/**/*.svelte ./src/routes/**/*.ts"
   },
   "dependencies": {
     "compression": "^1.7.1",
@@ -49,6 +51,8 @@
     "@types/compression": "^1.7.0",
     "@types/node": "^14.11.1",
     "@types/polka": "^0.5.1",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
