--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
 		"eslint:recommended",
 		"airbnb-base"
 	],
+	"parser": "babel-eslint",
 	"parserOptions": {
 		"ecmaVersion": 11,
 		"sourceType": "module",
