--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
 		"es2020": true
 	},
 	"rules": {
+		"linebreak-style": 0,
 		"class-methods-use-this": "off",
 		"import/extensions": [
 			"error",
