--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
 	"extends": [
 		"eslint:recommended",
-		"airbnb-base"
+		"airbnb-base",
+		"prettier"
 	],
 	"parser": "babel-eslint",
 	"parserOptions": {
