🚀 Changed build script

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "watch:css": "postcss src/assets/global.pcss -o static/global.css -w",
     "watch:dev": "sapper dev",
     "dev": "run-p watch:*",
-    "build": "run-s build:css build:sapper --legacy",
-    "build:css": "NODE_ENV=production postcss src/assets/global.pcss -o static/global.css",
+    "build": "run-s build:css build:sapper",
+    "build:css": "postcss src/assets/global.pcss -o static/global.css",
     "build:sapper": "sapper build",
     "build:export": "sapper export",
     "export": "run-s build:css build:export",
