--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss-import": "^14.0.0",
     "postcss-load-config": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
+    "randomcolor": "^0.6.2",
     "sapper-environment": "^1.0.1",
     "sirv": "^1.0.0",
     "tailwindcss": "^2.0.2"
