--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "serve": "serve ___sapper__/export",
     "eslint": "eslint ./src/*.ts ./src/components/**/*.svelte ./src/routes/*.svelte",
     "eslint:fix": "eslint --fix ./*.js ./src/*.ts ./src/components/**/*.svelte ./src/graphql/**/*.ts ./src/routes/**/*.svelte ./src/routes/**/*.ts",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "format": "prettier --write ./**/*.{js,svelte,md,html,css,json}"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -63,8 +64,12 @@
     "cypress": "^6.2.1",
     "eslint": "^7.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-svelte3": "^3.0.0",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^2.1.1",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
